clean(java): Simplify JBang with //PREVIEW